--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,19 @@
 }
 
 .progress {
-  border-radius: 0;
-  width: 100%;
+  border-radius: 20px;
+  width: 95%;
   background-color: grey;
+  margin-left: 1rem;
+  margin-bottom: 0.5rem;
+  
 }
 
 .bar {
   border-radius: 1rem;
   width: 30%;
   height: 30px;
-  background-color: green;
+  background-color: #95D9DA;
 }
 
 .App-logo {
@@ -54,7 +57,7 @@
 .PetFrame{
   width: 556px;
   height: 710px;
-  background: blueviolet;
+  background: #AE8CA3;
   text-align: center;
   position: relative;
   border-radius: 54%/65% 65% 47% 47%;
@@ -70,7 +73,7 @@
   box-shadow: 10px 10px 40px -20px rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: column;
-  
+  justify-content: center;
 }
  .PetFrame-inner{
   width: 256px;
@@ -85,7 +88,7 @@
  .loop {
   width: 30px;
   height: 30px;
-  background-color: blueviolet;
+  background-color: #AE8CA3;
   border-radius: 50%;
   position: absolute;
   left: 50%;
@@ -103,8 +106,8 @@
   top: 50%;
   margin-left: -9px;
   margin-top: -9px;
-  border: 2px solid blueviolet;
-  box-shadow: -1px -1px 2px 2px blueviolet;
+  border: 2px solid #AE8CA3;
+  box-shadow: -1px -1px 2px 2px #AE8CA3;
 }
 
 
@@ -123,10 +126,76 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #e84b30;
+  background-color:#339999;
   margin: 8px 10px;
-  border: 2px solid #e74327;
-  box-shadow: 1px 1px 3px 2px blueviolet;
+  border: 2px solid #339999;
+  box-shadow: 1px 1px 3px 2px #AE8CA3;
   -webkit-transition: background-color 200ms ease, box-shadow 200ms ease;
   transition: background-color 200ms ease, box-shadow 200ms ease;
+}
+.input-form-container{
+  background-color:transparent;
+}
+
+
+#submit-btn {
+  background:  #AE8CA3;
+
+  color: white;
+  
+  border-style: outset;
+  
+  border-color: #eee;
+  
+  height: 30px;
+  
+  width: 33px;
+  
+  font: bold 15px arial, sans-serif;
+  
+  text-shadow:none;
+  /* margin-top: 50%; */
+  
+  }
+
+  .err-msg{
+      color: #339999;
+  }
+  .start{
+      margin-top: 40%;
+  font-size: xx-large;
+  font-family: 'Press Start 2P' ;
+  }
+
+  .img{
+      margin-top: 100px;
+  }
+
+  .reset-button {
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: #339999;
+    border: 2px solid #339999 ;
+    box-shadow: 1px 1px 3px 2px #AE8CA3;
+    -webkit-transition: background-color 200ms ease, box-shadow 200ms ease;
+    transition: background-color 200ms ease, box-shadow 200ms ease;
+}
+
+.reset-button:hover {
+    cursor: pointer;
+}
+
+.end-frame-container {
+    /* position: absolute; */
+}
+
+.Gameover{
+    margin-top: 40%;
+    font-size: xx-large;
+    font-family: 'Press Start 2P' ;
 }
