--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,28 @@
-
-.App {
-  text-align: center;
+.progress-health {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  width: 80%;
+  background-color: grey;
 }
 
-.progress {
+.progress-hunger {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 20px;
-  width: 95%;
+  width: 73%;
   background-color: grey;
-  margin-left: 1rem;
-  margin-bottom: 0.5rem;
-  
 }
 
 .bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 1rem;
-  width: 30%;
-  height: 30px;
+  width: 100%;
+  height: 2.6rem;
   background-color: #95D9DA;
 }
 
@@ -54,7 +61,7 @@
   }
 }
 
-.PetFrame{
+.PetFrame {
   width: 556px;
   height: 710px;
   background: #AE8CA3;
@@ -62,20 +69,18 @@
   position: relative;
   border-radius: 54%/65% 65% 47% 47%;
   margin: auto;
-  /* top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%); */
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   box-shadow: 10px 10px 40px -20px rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
 }
- .PetFrame-inner{
+
+.PetFrame-inner {
   width: 256px;
   height: 310px;
   position: absolute;
@@ -83,9 +88,11 @@
   left: 0;
   border-radius: 54%/65% 65% 47% 47%;
   overflow: hidden;
- }
+}
+
 /* b3ml aldaqera alsfra alfadee mn fwq  */
- .loop {
+
+.loop {
   width: 30px;
   height: 30px;
   background-color: #AE8CA3;
@@ -95,6 +102,7 @@
   margin-left: -15px;
   top: -12px;
 }
+
 .loop:before {
   content: '';
   position: absolute;
@@ -110,92 +118,77 @@
   box-shadow: -1px -1px 2px 2px #AE8CA3;
 }
 
-
-.buttons {  
-  position: absolute;
-  bottom: 15px;
-  width: 100%;
-  text-align: center;
-}
-
 .button {
   display: inline-block;
   position: relative;
   overflow: hidden;
   cursor: pointer;
-  width: 50px;
-  height: 50px;
+  width: 6rem;
+  height: 6rem;
   border-radius: 50%;
-  background-color:#339999;
   margin: 8px 10px;
-  border: 2px solid #339999;
-  box-shadow: 1px 1px 3px 2px #AE8CA3;
-  -webkit-transition: background-color 200ms ease, box-shadow 200ms ease;
-  transition: background-color 200ms ease, box-shadow 200ms ease;
-}
-.input-form-container{
-  background-color:transparent;
+  transition: all .05s ease-in-out;
 }
 
+.button:hover {
+  transform: scale(1.3);
+}
+
+.button:active {
+  transform: scale(0.8);
+}
+
+.input-form-container {
+  background-color: transparent;
+}
+
+#name-input {
+  outline: none;
+  height: 1.8rem;
+  width: 15rem;
+  font-size: larger;
+  border-radius: 1rem;
+  padding-left: 1rem;
+  border: solid white 1px;
+}
 
 #submit-btn {
-  background:  #AE8CA3;
-
+  background: #AE8CA3;
   color: white;
-  
   border-style: outset;
-  
   border-color: #eee;
-  
-  height: 30px;
-  
-  width: 33px;
-  
+  height: 2rem;
+  width: 2rem;
+  font-size: larger;
+  border-radius: 1rem;
   font: bold 15px arial, sans-serif;
-  
-  text-shadow:none;
-  /* margin-top: 50%; */
-  
-  }
+  text-shadow: none;
+  margin-top: 1rem;
+  margin-left: 1rem;
+  outline: none;
+  border: solid white 1px;
+}
 
-  .err-msg{
-      color: #339999;
-  }
-  .start{
-      margin-top: 40%;
+.err-msg {
+  color: #ffffff;
+}
+
+.start {
+  margin-top: 40%;
   font-size: xx-large;
-  font-family: 'Press Start 2P' ;
-  }
+  font-family: 'Press Start 2P';
+}
 
-  .img{
-      margin-top: 100px;
-  }
-
-  .reset-button {
-    display: inline-block;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    background-color: #339999;
-    border: 2px solid #339999 ;
-    box-shadow: 1px 1px 3px 2px #AE8CA3;
-    -webkit-transition: background-color 200ms ease, box-shadow 200ms ease;
-    transition: background-color 200ms ease, box-shadow 200ms ease;
+.img {
+  margin-top: 100px;
 }
 
 .reset-button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.end-frame-container {
-    /* position: absolute; */
-}
-
-.Gameover{
-    margin-top: 40%;
-    font-size: xx-large;
-    font-family: 'Press Start 2P' ;
+.Gameover {
+  margin-top: 40%;
+  font-size: xx-large;
+  font-family: 'Press Start 2P';
 }
