--- a/src/App.css
+++ b/src/App.css
@@ -147,6 +147,7 @@
   height: 1.8rem;
   width: 15rem;
   font-size: larger;
+  font-family: 'Livvic' ;
   border-radius: 1rem;
   padding-left: 1rem;
   border: solid white 1px;
@@ -191,4 +192,10 @@
   margin-top: 40%;
   font-size: xx-large;
   font-family: 'Press Start 2P';
+}
+
+
+.name{
+  font-family: 'Berkshire Swash' ;
+
 }
