Fixes bug of status loading onto next round

--- a/src/App.css
+++ b/src/App.css
@@ -185,7 +185,7 @@ html, body {
   justify-content: center;
   align-items: center;
   margin-bottom: 1.7rem;
-  font-family: 'Berkshire Swash' ;
+  font-family: 'Livvic';
 }
 
 .name h1 {
